<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Detlef Gpodderson</string>
    <string name="player">Player</string>
    <string name="episodes">Episodes</string>
    <string name="podcasts">Podcasts</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_pod_list">Podcasts</string>
    <string name="title_activity_playlist">Playlist</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_setup">Setup</string>
    <string name="refresh">Refresh</string>
    <string name="playlist">Playlist</string>
    <string name="search">Search</string>
    <string name="take_url">Take URL</string>
    <string name="podcast_icon">Podcast Icon</string>
    <string name="sample_episode_name">Episode 15</string>
    <string name="sample_episode_description">Episode Description Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</string>
    <string name="now_playing">"Now playing: "</string>
    <string name="sample_podcast_name">My Podcast 1</string>
    <string name="sample_episode_name_2">My Episode 15</string>
    <string name="playlist_abbreviation">PL</string>
    <string name="fast_forward_abbreviation">FF</string>
    <string name="remove_from_playlist_abbreviation">-P/L</string>
    <string name="sample_download_size">15.6MB</string>
    <string name="clear_playlist">Clear Playlist</string>
    <string name="download_all">Download all</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="download_abbreviation">D/L</string>
    <string name="delete_abbreviation">Del</string>
    <string name="add_to_playlist_abbreviation">+P/L</string>
    <string name="mark_read">Read</string>
    <string name="episode">Episode</string>
    <string name="podcast">Podcast</string>
    <string name="settings">Settings</string>
    <string name="delete_feed">Delete Feed</string>
    <string name="placeholder">Placeholder</string>
    <string name="gpodder_net_account_settings">Account Settings</string>
    <string name="connection_settings_for_gpodder_net">Connection settings for gpodder.net</string>
    <string name="gpodder_username">gpodder.net Username</string>
    <string name="password">Password</string>
    <string name="password_mask_char">&#183;</string>
    <string name="device_name">Device name</string>
    <string name="test_connection">Verify account settings</string>
    <string name="tap_here_to_test_connection">Tap here to verify your gpodder.net account settings</string>
    <string name="checking_your_account_settings_title">Checking account settings&#8230;</string>
    <string name="checking_your_account_settings_summary">Hold your breath and cross your fingers - Your account settings are being checked on gpodder.net</string>
    <string name="connectiontest_successful">Hi %1$s! Your account settings are valid.</string>
    <string name="connectiontest_unsuccessful">Your username and/or password could not be verified.</string>
    <string name="connectiontest_error">Whoopsie - Could not connect to gpodder.net. Check your internet settings, relax a bit and try again.</string>
    <string name="operation_failed">Operation failed</string>
    <string name="refresh_successful">Refresh successful</string>
    <string name="refreshing_feed_list">Refreshing feed list…</string>
    <string name="refreshing">Refreshing</string>
    <string name="no_podcast_specified">No podcast specified</string>
    <string name="refreshing_feed_x_of_y">Refreshing feed %1$d of %2$d…</string>
    <string name="all_episodes">Show All Episodes</string>
    <string name="no_episode_selected">No episode selected!</string>
    <string name="failed_to_download_feed">failed to download feed</string>
    <string name="player_sample_already_played">00:00</string>
    <string name="player_sample_still_to_play">-02:56</string>
    <string name="device_doesnt_exist_fmt">Device %1$s doesn\'t exist.</string>
    <string name="title_activity_add_podcast">Add a new Podcast</string>
    <string name="add_new_podcast">Add new podcast</string>
    <string name="search_by_name">Search by name or enter URL</string>
    <string name="subscribe">Subscribe</string>
    <string name="podcast_logo">Podcast Logo</string>
    <string name="search_results">Search Results</string>
    <string name="popular_podcasts">Popular Podcasts</string>
    <string name="continue_set_up_title">Next Step</string>
    <string name="continue_set_up_summary">After you have successfully verified your account settings, tap here to continue setting up your account.</string>
    <string name="register_device_title">Registering device&#8230;</string>
    <string name="register_device_summary">Your device is now registered at gpodder.net</string>
    <string name="detlef_says_hello">Detlef says hello.</string>
    <string name="detlef_is_not_set_up_yet">Detlef is not set up on this device. Do you want to set up your account now?</string>
    <string name="almost_done">Almost done&#8230;</string>
    <string name="device_id_registration_success">Successfully connected device to gpodder.net.</string>
    <string name="detlef_will_now_synchronize">Your device is now connected to gpodder.net. Detlef will now synchronize your podcast list.</string>
    <string name="you_can_setup_your_account_later">No worries, you can set up your account anytime in the settings.</string>
    <string name="you_can_refresh_your_podcasts_later">No worries, you can refresh your podcast anytime later.</string>
    <string name="setup_finished">Horray! Set up is finished now. You may now use Detlef.</string>
    <string name="cannot_download_episode">Cannot download episode! Please make sure you have an internet connection and an SD card inserted!</string>
    <string name="suggestions">Suggestions</string>
    <string name="storage_location">StorageLocation</string>
    <string name="storage_settings">Storage Settings</string>
    <string name="storage_settings_summary">Lists storage information</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="advanced_settings_summary">Settings for experienced users</string>
    <string name="api_endpoint_hostname">API Endpoint Hostname</string>
    <string name="feed_endpoint_hostname">Feed Endpoint Hostname</string>
    <string name="register_device">Register Device</string>
    <string name="register_device_summary">Registering your device at gpodder.net</string>
    <string name="warning">Warning</string>
    <string name="you_are_changing_verified_username">You are changing the account settings of an account that already has been verified. If you change your settings you have to re-verify and syncronize your new settings afterwards.</string>
    <string name="account_is_verified">Account is verified.</string>
    <string name="enter_username_password_first">Enter username/password first!</string>
    <string name="device_registered_with_id">Device registered with id %1$s.</string>
    <string name="verify_settings_first">Verify account settings first!</string>
    <string name="set_up_account_first">Please set up your account first!</string>
    <string name="no_podcasts">No podcasts, press \'Add New Podcast\' to get started!</string>
    <string name="logo">logo</string>
    <string name="previous">Previous</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="sort_options">Sort Options</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="sort_by">sort by:</string>
    <string name="sort_order">order:</string>
    <string name="sort_ReleaseDate">Release Date</string>
    <string name="sort_Podcast">Podcast</string>
    <string name="sort_Ascending">Ascending</string>
    <string name="sort_Descending">Descending</string>
    <string name="no_gpodder_account_configured">No GPodder account configured.</string>
    <string name="syncing_episode_actions">Synchronizing episode actions.</string>
    <string name="search_hint">Search Episodes</string>
    <string name="show_only_new_episodes">Show only new episodes</string>
    <string name="close">Close</string>
    <string name="title_activity_licenses">Detlef Software Licenses</string>
    <string name="add_podcast_from_url">Add podcast from URL</string>
    <string name="register_gpodder_net_acccount">Register at gpodder.net</string>
    <string name="tap_here_to_go_to_gpodder_net_registration">Go to https://gpodder.net/register/ and register a new account.</string>
    <string name="download_episode">Download Episode</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="episode_added_to_playlist">Added %s to playlist</string>
    <string name="could_not_add_to_playlist">Could not add %s to playlist</string>
    <string name="episode_removed_from_playlist">Removed %s from playlist</string>
    <string name="episode_marked_as_read">Episode marked as read: %s</string>
    <string name="episode_marked_as_new">Episode marked as new: %s</string>
    <string name="episode_marked_failure">Could not change status for episode %s</string>
    <string name="error_occured">An Error occured.</string>
</resources>