<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <EditTextPreference android:title="@string/username" android:key="username" android:inputType="textNoSuggestions"/>
        <EditTextPreference android:title="@string/password" android:key="password" android:inputType="textPassword" />
        <EditTextPreference android:title="@string/device_name" android:key="devicename" android:inputType="textNoSuggestions"/>

        <Preference
            android:title="@string/test_connection"
            android:key="button_test_connect"
            android:summary="@string/tap_here_to_test_connection"
            android:id="@+id/button_testconnection"
        />

        <Preference
            android:title="@string/continue_set_up_title"
            android:key="button_next_step"
            android:summary="@string/continue_set_up_summary"
            android:id="@+id/button_continue_setup"
        />


</PreferenceScreen>