<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_show_only_new_episodes"
        android:showAsAction="never"
        android:title="@string/show_only_new_episodes"
        android:checkable="true"
        android:checked="false">
    </item>
    <item
        android:id="@+id/sort"
        android:showAsAction="ifRoom"
        android:title="@string/sort">
    </item>
    <item
        android:id="@id/playlist"
        android:showAsAction="ifRoom"
        android:title="@string/playlist">
    </item>
    <item
        android:id="@+id/add_new_podcast"
        android:showAsAction="ifRoom"
        android:title="@string/add_new_podcast">
    </item>
    <item
        android:id="@id/settings"
        android:showAsAction="never"
        android:title="Settings">
    </item>
    <item
        android:id="@+id/menu_search"
        android:title="Search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:actionViewClass="android.widget.SearchView"
    />

</menu>