<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/refresh"
        android:showAsAction="ifRoom"
        android:title="@string/refresh"
        android:actionLayout="@layout/refresh_button">
    </item>
    <item
        android:id="@id/playlist"
        android:showAsAction="ifRoom"
        android:title="@string/playlist">
    </item>
    <item
        android:id="@+id/add_new_podcast"
        android:showAsAction="ifRoom"
        android:title="@string/add_new_podcast">
    </item>
    <item
        android:id="@+id/licenses"
        android:showAsAction="never"
        android:title="Software Licenses">
    </item>
    <item
        android:id="@id/settings"
        android:showAsAction="never"
        android:title="Settings">
    </item>
    

</menu>