<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/infoLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:layout_weight="6" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/podcast_icon"
            android:gravity="center"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/playerEpisode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:gravity="center"
            android:text="@string/sample_episode_name"
            android:textColor="#0099CC"
            android:textStyle="bold" />

        <!--
             TextView
            android:id="@+id/playerEpisodeDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/playerEpisode"
            android:gravity="center"
            android:maxLines="8"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:text="@string/sample_episode_description" /
        -->

        <WebView
            android:id="@+id/playerEpisodeDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/playerEpisode"
            android:gravity="center"
            android:scrollbars="vertical" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="3" >

        <!--
            TextView
            android:id="@+id/nowPlayingString"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/now_playing" /
        -->

        <TextView
            android:id="@+id/playerPodcastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sample_podcast_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/playerEpisodeName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/playerPodcastName"
            android:ellipsize="marquee"
            android:gravity="center"
            android:text="@string/sample_episode_name_2"
            android:textColor="#0099CC"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/SeekBar01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/playerEpisodeName"
            android:layout_toLeftOf="@+id/ButtonFF"
            android:layout_toRightOf="@+id/ButtonPlayStop"
            android:minHeight="20dp" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SeekBar01"
            android:stretchColumns="*" >

            <TableRow>

                <ImageButton
                    android:id="@+id/ButtonRewind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="100dp"
                    android:src="@android:drawable/ic_media_rew" />

                <ImageButton
                    android:id="@+id/ButtonPlayStop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="100dp"
                    android:src="@android:drawable/ic_media_play" />

                <ImageButton
                    android:id="@+id/ButtonFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="100dp"
                    android:src="@android:drawable/ic_media_ff" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</LinearLayout>